# audiolibrarian

./: .gitignore  .readthedocs.yaml  01.flac.REMOVED.git-id  03.flac.REMOVED.git-id  18.flac.REMOVED.git-id  CONTRIBUTING.md  Makefile  README.md  bitbucket-pipelines.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  requirements_base.txt  setup.py
.github/workflows/: main.yml
audiolibrarian/: __init__.py  audio_converter.py  audioinfo.py  audiolibrarian.py  audiosource.py  base.py  cli.py  cmd.py  commands.py  config.py  discogs.py  genremanager.py  librarian.py  musicbrains.py  musicbrainz.py  output.py  records.py  text.py  workflows.py
audiolibrarian/audiofile/: __init__.py  audiofile.py  audioinfo.py  base.py  flac.py  m4a.py  mp3.py  tags.py  wav.py
audiolibrarian/audioinfo/: __init__.py
audiolibrarian/audioinfo2/: __init__.py
audiolibrarian/musicbrainz/: __init__.py  musicbrainz.py
audiolibrarian/picard_src/: README.md  __init__.py  textencoding.py
audiolibrarian/records/: __init__.py  records.py
docs/: index.md
docs/api/: audiolibrarian.md
docs/development/: changelog.md  contributing.md
docs/user-guide/: advanced.md  changelog.md  configuration.md  getting-started.md  installation.md
git_hooks/: README.md  pre-push
jibaudio/: audio_converter.py  musicbrains.py
picard_src/: textencoding.py
scripts/: audiolibrarian  audiolibrary  audiolibrary_mb  update_links.sh
src/audiolibrarian/: __init__.py  audiosource.py  base.py  cli.py  commands.py  config.py  genremanager.py  musicbrainz.py  normalizer.py  output.py  records.py  settings.py  sh.py  text.py
src/audiolibrarian/audiofile/: __init__.py  audiofile.py  flac.py  m4a.py  mp3.py  tags.py
src/audiolibrarian/audiofile/formats/: __init__.py  flac.py  m4a.py  mp3.py
src/audiolibrarian/entrypoints/: __init__.py  cli.py
src/audiolibrarian/templates/: config.toml
src/picard_src/: README.md  __init__.py  textencoding.py
tests/: __init__.py  conftest.py  helpers.py  test__audiofile.py  test__audiolibrarian.py  test__audiosource.py  test__commands.py  test__config.py  test__misc.py  test__musicbrainz.py  test__normalizer.py  test__output.py  test__records.py  test__settings.py  test__tags.py  test__text.py  test_records.py
tests/test_data/: 00.flac  00.m4a  01.flac  01.m4a  03.flac  03.m4a  09.flac  09.m4a  10.flac  10.m4a  17.flac  17.m4a  18.flac  18.m4a  Manifest.yaml  README.md  checksums
tools/: __init__.py  diff.py  show_tags.py
