[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.12"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "mkdocs-material>=9.7.6",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=1.20.2",
    "pymarkdownlnt>=0.9.36",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260408",
    "types-setuptools>=82.0.0.20260408",
    "uv-build>=0.11.7",
]

[project]
authors = [{name = "Steve Jibson", email = "steve@jibson.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]
description = "Manage my audio library."
dependencies = [
    "ansicolors>=1.1.8",
    "discid>=1.4.0",
    "ffmpeg-normalize>=1.37.6",
    "filelock>=3.29.0",
    "fuzzywuzzy>=0.18.0",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pydantic-settings>=2.14.0",
    "python-levenshtein>=0.27.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "xdg-base-dirs>=6.0.2",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
name = "audiolibrarian"
readme = "README.md"
requires-python = ">=3.12"
version = "0.18.0"

[project.scripts]
audiolibrarian = "audiolibrarian.entrypoints.cli:main"

[project.urls]
Repository = "https://github.com/toadstule/audiolibrarian"

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = true
install_types = true
no_strict_optional = true  # All of our record fields default to None.
non_interactive = true
pretty = true
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "picard_src.*"
ignore_errors = true  # This is not our code.

[tool.pymarkdown]
plugins.md013.line_length = 100
plugins.md013.code_block_line_length = 100
plugins.md024.enabled = false
#plugins.md007.enabled = true
#plugins.md007.code_block_line_length = 160

[tool.ruff]
extend-exclude = [
    "picard_src",  # This is not our code.
]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "COM812",  # This gets upset when there isn't a trailing comma in a multi-line split string.
               # The formatter will add/verify the trailing commas.
    "T201",    # This check prevents the use of print() -- which would be fine for non-interactive programs.
]
select = [
    "ALL",  # All the checks.
    "D401"  # Use imparative mood for comments. The "google" pydocstyle convention disables this, so we'll re-enable it.
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",    # Allow tests to use assert statements.
    "SLF001",  # Allow tests to access private members.
]

[tool.ruff.lint.pydocstyle]
convention = "google"
